# agentirc

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: dockerhub.yml
agentirc/: __init__.py  __main__.py  api.py  bot.py  config.py  history.py  models.py  tools.py
chatbot/: __init__.py  __main__.py  api.py  bot.py  config.py  history.py  tools.py
docs/: ai-agent.md  ai-output-disclaimer.md  commands.md  configuration.md  docker.md  extending.md  not-a-companion.md
ircbot/: __init__.py  __main__.py  bot.py  commands.py  config.py  connection.py  protocol.py
tests/: conftest.py  test_agentirc_api.py  test_agentirc_commands.py  test_agentirc_models_tools.py  test_bot.py  test_chatbot_api.py  test_chatbot_commands.py  test_chatbot_models_tools.py  test_commands.py  test_config.py  test_connection.py  test_country_and_store.py  test_history_location.py  test_history_persistence.py  test_protocol.py
