[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentirc"
version = "1.0.0"
description = "AI-powered IRC agent with multi-provider LLM support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
crypto = ["cryptography>=43"]

[project.scripts]
agentirc = "agentirc.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["ircbot", "agentirc"]
