[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentirc"
version = "1.1.1"
description = "AI-powered IRC agent with multi-provider LLM support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["irc", "bot", "ai", "llm", "chatbot", "agent", "openai", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
"Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/h1ddenpr0cess20/agentirc"
Repository = "https://github.com/h1ddenpr0cess20/agentirc"
Issues = "https://github.com/h1ddenpr0cess20/agentirc/issues"

[project.optional-dependencies]
crypto = ["cryptography>=43"]

[project.scripts]
agentirc = "agentirc.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["ircbot", "agentirc"]

[tool.hatch.build.targets.wheel.force-include]
"agentirc/.env.example" = "agentirc/.env.example"
